# kodex

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs
.claude-plugin/: marketplace.json
.github/workflows/: release.yml
docs/: mascot.md
plugins/kodex/.claude-plugin/: plugin.json
site/: index.html
src/: hash.rs  lib.rs  main.rs  model.rs  symbol.rs
src/index/: reader.rs  writer.rs
src/ingest/: classify.rs  fallback.rs  interner.rs  merge.rs  mill.rs  mod.rs  printer.rs  provider.rs  sbt.rs  scala_cli.rs  semanticdb.rs  types.rs
src/query/: filter.rs  format.rs  graph.rs  mod.rs  symbol.rs
src/query/commands/: calls.rs  info.rs  mod.rs  noise.rs  overview.rs  refs.rs  search.rs  trace.rs
tests/: bug_fixes.rs  command_coverage.rs  index_roundtrip.rs  invariants.rs  multi_symbol.rs  noise_detection.rs
tests/common/: mod.rs
tests/integration/: README.md  mill-cross-platform.sh  run-all.sh
tests/snapshot/: queries.sh  queries.sh.example  run.sh
tests/snapshot/snapshots/: help__calls.stdout  help__index.stdout  help__info.stdout  (+3 more)
tests/snapshots/: command_coverage__cmd_flow_depth1.snap  command_coverage__cmd_info_class.snap  command_coverage__cmd_info_trait.snap  command_coverage__cmd_noise_rich_index.snap  command_coverage__cmd_noise_small_index.snap  command_coverage__search_finds_both_val_and_def_methods.snap  command_coverage__search_multi_match_shows_file_and_line.snap  command_coverage__search_single_match_detail_shows_file_and_line.snap  command_coverage__search_single_match_method_shows_line_range.snap
(+8 files in other folders)
